--- a/index.html
+++ b/index.html
@@ -26,11 +26,22 @@
             <button id="clearBtn" class="clear-btn">Clear</button>
 
         </section>
+        <!--search filters-->
+        <section class="filters">
+            <label><input type="checkbox" id="vegFilter"> Vegetarian</label>
+            <label><input type="checkbox" id="veganFilter"> Vegan</label>
+            <label><input type="checkbox" id="glutenFilter"> Gluten-Free</label>
+        </section>
 
         <!--Recent searches section-->
         <section id="recentSearches" class="recent-searches"></section>
+        
         <!--Spinner indicator-->
         <section id="loading" class="loading hidden">
+            <div class="spinner"></div>
+        </section>
+        <!--loading indicator-->
+        <section id="detailsLoading" class="loading hidden">
             <div class="spinner"></div>
         </section>
 
