--- a/favorites.html
+++ b/favorites.html
@@ -11,12 +11,13 @@
 <body>
 
     <header class="header">
-        <img src="assets/img/icon.png" alt="Pot Icon" class="logo">
+        <img src="assets/images/icon.jpg" alt="Pot Icon" class="logo">
         <h1>Your Favorite Recipes</h1>
     </header>
 
     <main id="favoritesContainer" class="results-grid"></main>
 
-    <script src="assets/js/favorites.js"></script>
+    <script type="module" src="assets/scripts/search.js"></script>
+
 </body>
 </html>
