--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <header class="header">
-        <img src="assets/img/icon.png" alt="Pot Icon" class="logo">
+        <img src="assets/images/icon.jpg" alt="Pot Icon" class="logo">
         <h1>Recipe Finder</h1>
     </header>
 
@@ -35,7 +35,7 @@
 
         <!--Recent searches section-->
         <section id="recentSearches" class="recent-searches"></section>
-        
+
         <!--Spinner indicator-->
         <section id="loading" class="loading hidden">
             <div class="spinner"></div>
@@ -50,7 +50,6 @@
         </section>
     </main>
 
-    <script src="assets/js/api.js"></script>
-    <script src="assets/js/search.js"></script>
+    <script type="module" src="assets/scripts/search.js"></script>
 </body>
 </html>
