--- a/recipe.html
+++ b/recipe.html
@@ -12,7 +12,7 @@
 <body>
 
     <header class="header">
-        <img src="assets/img/icon.png" alt="Pot Icon" class="logo">
+        <img src="assets/imgages/icon.jpg" alt="Pot Icon" class="logo">
         <h1>Recipe Details</h1>
     </header>
 
@@ -24,7 +24,8 @@
 
     </main>
 
-    <script src="assets/js/api.js"></script>
-    <script src="assets/js/details.js"></script>
+    <script type="module" src="assets/scripts/search.js"></script>
+
+
 </body>
 </html>
