--- a/recipe.html
+++ b/recipe.html
@@ -12,7 +12,7 @@
 <body>
 
     <header class="header">
-        <img src="assets/imgages/icon.jpg" alt="Pot Icon" class="logo">
+        <img src="assets/images/icon.jpg" alt="Pot Icon" class="logo">
         <h1>Recipe Details</h1>
     </header>
 
@@ -24,7 +24,7 @@
 
     </main>
 
-    <script type="module" src="assets/scripts/search.js"></script>
+    <script type="module" src="assets/scripts/details.js"></script>
 
 
 </body>
