wireframe added and some small fixes

--- a/favorites.html
+++ b/favorites.html
@@ -13,11 +13,13 @@
     <header class="header">
         <img src="assets/images/icon.jpg" alt="Pot Icon" class="logo">
         <h1>Your Favorite Recipes</h1>
+
+        <nav> <a href="index.html" class="nav-link">Back to Search</a> </nav>
     </header>
 
     <main id="favoritesContainer" class="results-grid"></main>
 
-    <script type="module" src="assets/scripts/search.js"></script>
+    <script type="module" src="assets/scripts/favorites.js"></script>
 
 </body>
 </html>
