--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <header class="header">
         <img src="assets/images/icon.jpg" alt="Pot Icon" class="logo">
         <h1>Recipe Finder</h1>
+
+        <nav> 
+            <a href="favorites.html" class="nav-link">Favorites</a>
+        </nav>
     </header>
 
     <main>
